--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -119,6 +119,10 @@ p{margin-bottom:15px;}
 
 // Index
 
+.body-content{
+	margin-bottom:15px;
+}
+
 #actualidad{
 	
 	.box-shadow(0px, -4px, 5px,#b9b9b9);
@@ -318,4 +322,9 @@ p{margin-bottom:15px;}
 .doc-sidebar{
 	margin-top:10px;
 	font-size:12px;
+}
+
+.contraparte-nota{
+	width:360px;
+	img{margin-right:10px;}
 }
