--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -47,9 +47,9 @@
               <div class="row">
                   <div class="span6 offset6" id="menu">
                       <a href="/notas" class="blogmenu">Notas</a>
-                      <a href="#" class="acercamenu">Acerca de</a>
-                      <a href="#" class="contrapartemenu">Contrapartes</a>
-                      <a href="#" class="eventomenu">Eventos</a>
+                      <a href="/acerca" class="acercamenu">Acerca de</a>
+                      <a href="/contrapartes" class="contrapartemenu">Contrapartes</a>
+                      <a href="/agendas" class="eventomenu">Eventos</a>
                       <div class="clean"></div>
                   </div>
               </div>
