--- a/templates/contrapartes/contraparte_detail.html
+++ b/templates/contrapartes/contraparte_detail.html
@@ -1,15 +1,27 @@
 {% extends "base.html" %}
-
 {% block title %}{{object.nombre}}{% endblock %}
-
 {% block contenido %}
-
-<div class="titulo-foro"> {% if notas.user == request.user or request.user.is_superuser %}
-    <a href="/contrapartes/editar/{{object.id}}">[editar]</a>|
-    <a href="/contrapartes/borrar/{{object.id}}">[borrar]</a>{% endif %}
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        CONTRAPARTES
+                    </div>
+                </div>
+                <div class="span7">
+                 <div class="btn-group acciones">
+                        {% if objetc.userprofile.user == request.user or request.user.is_superuser %}
+                            <a class="btn" href="/contrapartes/editar/{{object.id}}"><i class="icon-pencil"></i>Editar</a>
+                            <a class="btn" href="/contrapartes/borrar/{{object.id}}"><i class="icon-remove-sign"></i>Borrar</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+      </div>
+    </div>
 </div>
-
-
     <br>
          Nombre: {{object.nombre}}<br> 
          {% if object.logo %}
