cambios de templates

--- a/templates/contrapartes/contraparte_detail.html
+++ b/templates/contrapartes/contraparte_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseinterna.html" %}
 {% block title %}{{object.nombre}}{% endblock %}
 {% block contenido %}
 <div class="row">
