--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                   {% endif %}
               </ul>
               <form class="navbar-search pull-right">
-                <input type="text" class="search-query" placeholder="Search">
+                <input type="text" class="search-query" placeholder="Buscar">
               </form>
             </div>
         </div>
