plantillas de contrapartes

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -22,7 +22,7 @@
 	color:#5BB75B;
 }
 
-p{margin-bottom:15px;}
+p{margin-bottom:0px;}
 
 /* Header */
 
@@ -310,6 +310,9 @@ p{margin-bottom:15px;}
 	margin-bottom:4px;
 }
 
+.detalle-full{
+	margin-bottom:15px;
+}
 
 // Sidebar
 
@@ -317,6 +320,8 @@ p{margin-bottom:15px;}
 	text-transform:uppercase;
 	font-weight:bold;
 	margin-top:15px;
+	color:#959595;
+	font-size:11px;
 }
 
 .doc-sidebar{
@@ -328,3 +333,43 @@ p{margin-bottom:15px;}
 	width:360px;
 	img{margin-right:10px;}
 }
+
+.nota-sidebar{
+	border-bottom:#eee 1px solid;
+	padding-bottom:10px;
+	padding-top:10px;
+	.nota-sidebar-title{
+		float:left;
+		width:300px;
+		margin-top:10px;
+		a{
+			color:#9eb31b;
+			font-weight:bold;
+		}
+	}
+	img{
+		float:left;
+		margin-right:10px;
+	}
+}
+
+// Contrapartes
+.contraparte-detalle-logo{
+	float:left;
+}
+
+.contraparte-tabla{
+	float: right;
+	width:350px;
+	margin-top:10px;
+}
+
+.destacado-content{
+	color:#016a68;
+	font-size:15px;
+	font-weight:bold;
+	border-bottom:#eee 1px solid;
+	padding-bottom:4px;
+	margin-bottom:10px;
+}
+
