agregando el django ckeditor ya que tiny da error :(

--- a/templates/agendas/crear_agenda.html
+++ b/templates/agendas/crear_agenda.html
@@ -2,6 +2,7 @@
 
 {% block contenido %}
 	<form enctype="multipart/form-data" action="." method="post" accept-charset="utf-8">{% csrf_token %}
+		{{ form.media }}
 		{{form.as_p}}
 		{{form1.as_p}}
 		<input id="boton-preguntar" type="submit" value="Guardar">
