--- a/templates/foros/crear_foro.html
+++ b/templates/foros/crear_foro.html
@@ -4,12 +4,11 @@
 <link href="/files/css/jquery.autocomplete.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="/files/js/autocompletejs/jquery.autocomplete.js"></script>
-<script type="text/javascript" src="/files/js/tiny_mce/tiny_mce.js"></script>
-<script type="text/javascript" src="/files/js/tiny_mce/cafodconfig.js"></script>
 {% endblock %}
 
 {% block contenido%}
     <form enctype="multipart/form-data" action="." method="post">{% csrf_token %}
+        {{ form.media }}
         {{form.as_p}}
         <h6>Agregar Imagen</h6>
         {{form2.as_p}}
