--- a/templates/notas/crear_nota.html
+++ b/templates/notas/crear_nota.html
@@ -2,6 +2,7 @@
 
 {% block contenido %}
 	<form enctype="multipart/form-data" action="." method="post" accept-charset="utf-8">{% csrf_token %}
+		{{ form.media }}
 		{{form.as_p}}
 		<h6>Agregar imagenes</h6>
 		{{form2.as_p}}
