algo en las templates

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -388,3 +388,7 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	margin-right:10px;
 	.add-on{margin-top:0px;}
 }
+
+#actionbuttons{
+	width:180px;
+}
