--- a/templates/notas/notas_list.html
+++ b/templates/notas/notas_list.html
@@ -21,7 +21,7 @@
 	  </div>
 	</div>
 </div>
-<div class="row">
+<div class="row" style="margin-top:10px;">
 	<div class="container">
 		{% for nota in notas %}
 			<div class="row">
