--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -24,6 +24,8 @@
 
   // assign "pager-active" class to the first thumb
   $('.thumbs a:first').addClass('pager-active');
+$('#myModal').modal('hide');
+$(".alert").alert()
 });
 </script>
 {%endblock%}
@@ -41,9 +43,22 @@
                     <div class="btn-group acciones">
                         {% if notas.user == request.user or request.user.is_superuser %}
                             <a class="btn" href="/notas/editar/{{object.id}}"><i class="icon-pencil"></i>Editar</a>
-                            <a class="btn" href="/notas/borrar/{{object.id}}"><i class="icon-remove-sign"></i>Borrar</a>
+                            <a class="btn" data-toggle="modal" data-target="#myModal"  ><i class="icon-remove-sign"></i>Borrar</a>
                         {% endif %}
-                    </div>
+                       </div> 
+                        <div class="modal fade hide" id="myModal">
+                          <div class="modal-header">
+                            <a class="close" data-dismiss="modal">×</a>
+                            <h3>Esta Seguro?</h3>
+                          </div>
+                          <div class="modal-body">
+                            <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
+                          </div>
+                          <div class="modal-footer">
+                            <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+                            <a href="/notas/borrar/{{object.id}}" class="btn btn-danger">Borrar Permanentemente</a>
+                          </div>
+                        </div>  
                 </div>
             </div>
       </div>
@@ -53,6 +68,12 @@
     <div class="container">
         <div class="row">
             <div class="span7">
+                {% if request.GET.shva == 'ok' %}
+                  <div class="alert fade in">
+                      La nota ha sido editada con &eacute;xito!
+                      <a class="close" href="#" data-dismiss="alert">x</a>
+                  </div>
+                {% endif %}
                <h1 class="titulo-grande">{{object.titulo}}</h1>
                <div class="extrainfofull">{{object.fecha}}  |  {{object.pais.nombre}}</div>
             </div>
@@ -82,7 +103,7 @@
                     <div class="clean"></div>
                 </div>
                 {%endif%}
-                {%if object.adjuntos.all %}
+                {%if object.adjuntos.all.count > 0 %}
                     <div class="sidebar-title">Documentos</div>
                     <div class="dividerline"></div>
                     <table class="table  table-bordered table-condensed doc-sidebar">
