generic form nota

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -382,6 +382,8 @@ form hr{margin-top:10px; margin-bottom:10px;}
 }
 
 
+
+//FORMS
 .form-inline{
 	width:270px;
 	float: left;
@@ -391,4 +393,28 @@ form hr{margin-top:10px; margin-bottom:10px;}
 
 #actionbuttons{
 	width:180px;
+}
+
+.file{
+	label{
+		width: 50px;
+		float: left;
+
+	}
+	#logo-clear_id{
+		float: left;
+		margin-right:10px;
+	}
+	a{clear:both;}
+}
+
+.mediasgenerics{
+	input, textarea, select, .uneditable-input{
+		width:150px;
+	}
+}
+
+.filefield input[type="file"]{
+	width:100px;
+	position: relative;
 }
