--- a/templates/notas/crear_nota.html
+++ b/templates/notas/crear_nota.html
@@ -2,7 +2,7 @@
 {%block extra_js%}
 <script type="text/javascript">
     $(document).ready(function(){
-		$('input').tooltip({'placement':'right'})
+		$('input').tooltip({'placement':'right'});
 	});
 </script>
 <style type="text/css">
@@ -22,6 +22,12 @@
 	    		$elem.removeClass('fixed');
 	    	}
 	    }); 
+	    var $file = $('.file > a');
+	    var url = $file.text();
+	    $file.html('');
+	    $file.append('<img src="/uploads/'+url+'" width="60" height="60">');
+
+	    $(".collapse").collapse();
 	});
 </script>
 {%endblock%}
@@ -58,10 +64,50 @@
 					<label class="control-label">{{form.contenido.label}}</label>
 					{{form.contenido}}
 					<hr>
-		<h6>Agregar imagenes</h6>
-		{{form2.as_p}}
-		<h6>Agregar adjuntos</h6>
-		{{form3.as_p}}
+
+
+
+
+
+
+					<div class="row mediasgenerics">
+						<div class="span3">
+							<div class="input-append">
+								<label class="control-label">Fotos</label>
+								<div id="accordion2" class="accordion">
+								{%for fotoform in form2%}
+								    <div class="accordion-group">
+								      <div class="accordion-heading">
+								        <a href="#{{forloop.counter}}" data-parent="#accordion2" data-toggle="collapse" class="accordion-toggle">
+								          foto
+								        </a>
+								      </div>
+								      <div class="accordion-body collapse in" id="{{forloop.counter}}">
+								        <div class="accordion-inner">
+								        	{{fotoform.nombre_img}}
+								        	<div class="filefield">
+								          {{fotoform.foto}}
+								      </div>
+								          {{fotoform.tags_img}}
+								        </div>
+								      </div>
+								    </div>
+								{%endfor%}
+								</div>	
+							</div>
+						</div>
+
+
+						<div class="span-3">
+							<div class="input-append">
+								<label class="control-label">Documentos</label>
+								{{form3.as_p}}
+							</div>
+						</div>
+					
+					</div>
+
+					<hr>
 				</div>
 			</div>
 			<div class="span3">
