--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -418,3 +418,11 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	width:100px;
 	position: relative;
 }
+
+.tab-media{
+	width:480px;
+	float:left;
+}
+.nav-tab-media{
+	height:1500px;
+}
