validando si existe documento en la nota

--- a/templates/notas/editar_nota.html
+++ b/templates/notas/editar_nota.html
@@ -82,7 +82,7 @@
 							<b>DODCUMENTOS</b>
 							{{ form3.management_form }}
 							{% for docu in form3.forms %}
-								{{foto}}
+								{{docu}}
 							{% endfor %}
 							<hr>
 						  </div>
