--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -420,9 +420,29 @@ form hr{margin-top:10px; margin-bottom:10px;}
 }
 
 .tab-media{
-	width:480px;
+	width:490px;
 	float:left;
 }
 .nav-tab-media{
-	
+
 }
+
+.file label{display: none;}
+
+.media-form-inline{
+	padding:10px;
+	background:#fff;
+	.rounded-corners(5px);
+	.box-shadow(0px, 2px, 3px, #b3b3b3);
+	margin-bottom:15px;
+	border-bottom:#e9e9e9 15px solid;
+}
+
+.helptext{
+	font-size:11px;
+	margin-top:-10px !important;
+	color:#aaa;
+	display: block;
+}
+
+#foros-imagen-content_type-object_id-0-foto-clear_id{display:none;}
