--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -44,6 +44,11 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	height:130px;
 }
 
+#grisheader-admin{
+	background:#d9d9d5 url(/files/img/cafodtrans.png) no-repeat right bottom;
+	height:100px;
+}
+
 #menulogo{
 	height:80px;
 	background:#fff url(/files/img/cafodlogo.jpg) no-repeat 10px 10px;
