--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -451,3 +451,47 @@ form hr{margin-top:10px; margin-bottom:10px;}
 }
 
 #foros-imagen-content_type-object_id-0-foto-clear_id{display:none;}
+
+//Barra admin 
+
+#barra-admin a{
+	height:100px;
+	width:120px;
+	display: block;
+	float:left;
+	text-align:center;
+	line-height:170px;
+	color:#666;
+	&:hover{
+		text-decoration:none;
+		color:#000;
+	}
+}
+
+.notaiconadmin{
+	background:url(/files/img/adminnotas.png) no-repeat center center;
+}
+
+.agendaiconadmin{
+	background:url(/files/img/adminagenda.png) no-repeat center center;
+}
+
+.foroiconadmin{
+	background:url(/files/img/adminforo.png) no-repeat center center;
+}
+
+.multimediaiconadmin{
+	background:url(/files/img/adminmultimedia.png) no-repeat center center;
+}
+
+.documentosiconadmin{
+	background:url(/files/img/admindocumentos.png) no-repeat center center;
+}
+
+.divisor-barra-admin{
+	background:url(/files/img/divisoradmin.png) no-repeat bottom right;
+	width:3px;
+	display: block;
+	float:left;
+	height:100px;
+}
