--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -48,12 +48,19 @@
           <div class="span3" >
             <img src="/files/img/cafodlogoadmin.png">
           </div>
-          <div class="span9">
-            <a href="#">Blog</a>
-            <a href="#">Agenda</a>
-            <a href="#">Foro</a>
-            <a href="#">Documentos</a>
-            <a href="#">Multimedia</a>
+          <div class="span9" id="barra-admin">
+            <div class="divisor-barra-admin"></div>
+            <a href="#" class="notaiconadmin">Notas</a>
+            <div class="divisor-barra-admin"></div>
+            <a href="#" class="agendaiconadmin">Agenda</a>
+            <div class="divisor-barra-admin"></div>
+            <a href="#" class="foroiconadmin">Foro</a>
+            <div class="divisor-barra-admin"></div>
+            <a href="#" class="documentosiconadmin">Documentos</a>
+            <div class="divisor-barra-admin"></div>
+            <a href="#" class="multimediaiconadmin">Multimedia</a>
+            <div class="divisor-barra-admin"></div>
+            <div class="clean"></div>
           </div>
       </div>
     </div>
