--- a/templates/registration/perfil.html
+++ b/templates/registration/perfil.html
@@ -1,4 +1,48 @@
 {% extends "baseadmin.html" %}
 {%block contenido%}
-algo perfil
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        BIENVENIDO <b style="text-transform:uppercase;">{{request.user.username}}</b>
+                    </div>
+                </div>
+                <div class="span7">
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
+<div class="row">
+      <div class="container">
+            <div class="row">
+                <div class="span3">
+                	<div class="well">
+                		<div><img src="/files/img/avatar.png"></div>
+                		<div>{{user.username}}</div>
+                		<div>Email del usuario</div>
+                		<a href="#" class="btn">Editar</a>
+                	</div>
+                </div>
+                <div class="span3">
+                	<div class="well">
+                		<div>Logo de contraparte</div>
+                		<div>Nombre de contraparte</div>
+                		<div>Pais</div>
+                		<a href="#" class="btn">Editar</a>
+                	</div>
+                </div>
+                <div class="span6">
+                	<div class="alert">Espacio reservado para un calendario de actividades<br><br><br><br><br><br><br></div>
+                </div>
+            </div>
+            <div class="row">
+            	<div class="span12">
+            		<div class="alert">Espacio reservado para mostrar las ultimas activiades del foro<br><br><br><br><br><br><br></div>
+            	</span>
+            </div>
+      </div>
+</div>
 {%endblock%}
