--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -54,7 +54,7 @@
             <div class="divisor-barra-admin"></div>
             <a href="#" class="agendaiconadmin">Agenda</a>
             <div class="divisor-barra-admin"></div>
-            <a href="#" class="foroiconadmin">Foro</a>
+            <a href="/foro" class="foroiconadmin">Foro</a>
             <div class="divisor-barra-admin"></div>
             <a href="#" class="documentosiconadmin">Documentos</a>
             <div class="divisor-barra-admin"></div>
