--- a/templates/registration/perfil.html
+++ b/templates/registration/perfil.html
@@ -31,19 +31,25 @@
                 		<div><img src="{{user.userprofile.contraparte.logo.url_70x60}}" /> </div>
                 		<div>{{user.userprofile.contraparte.nombre}}</div>
                 		<div>{{user.userprofile.contraparte.pais.nombre}}</div>
-                		<a href="#" class="btn">Editar</a>
+                		<a href="/contrapartes/editar/{{user.userprofile.contraparte.id}}" class="btn">Editar</a>
                 	</div>
                 </div>
                 <div class="span6">
                 	<div class="alert">Espacio reservado para un calendario de actividades<br><br><br>
-                        {{usuario}}
+                        {% for agenda in agendas %}
+                            {{agenda.evento}}<br>
+                            {{agenda.descripcion|safe|truncatewords:10 }}<br>
+                        {% endfor %}
                         <br><br><br><br></div>
                 </div>
             </div>
             <div class="row">
             	<div class="span12">
             		<div class="alert">Espacio reservado para mostrar las ultimas activiades del foro<br><br><br>
-                        {{foros}}
+                        {% for foro in foros %}
+                            {{foro.nombre}}<br>
+                            {{foro.contenido|safe|truncatewords:10}}<br>
+                        {% endfor %}
                         <br><br><br><br></div>
             	</span>
             </div>
