cosas del admin

--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -50,13 +50,13 @@
           </div>
           <div class="span9" id="barra-admin">
             <div class="divisor-barra-admin"></div>
-            <a href="#" class="notaiconadmin">Notas</a>
+            <a href="/foro/privado/nota" class="notaiconadmin">Notas</a>
             <div class="divisor-barra-admin"></div>
-            <a href="#" class="agendaiconadmin">Agenda</a>
+            <a href="/foro/privado/agenda" class="agendaiconadmin">Agenda</a>
             <div class="divisor-barra-admin"></div>
-            <a href="#" class="foroiconadmin">Foro</a>
+            <a href="/foro" class="foroiconadmin">Foro</a>
             <div class="divisor-barra-admin"></div>
-            <a href="#" class="documentosiconadmin">Documentos</a>
+            <a href="/foro/privado/documento" class="documentosiconadmin">Documentos</a>
             <div class="divisor-barra-admin"></div>
             <a href="#" class="multimediaiconadmin">Multimedia</a>
             <div class="divisor-barra-admin"></div>
