--- a/templates/privados/documentos_tag.html
+++ b/templates/privados/documentos_tag.html
@@ -6,7 +6,7 @@ Tags<br>
 	<a href="/foro/privado/documento_tag/{{tag}}">{{tag}}</a><br>
 {% endfor %}
 <hr>
-	{% for a in documentos %}
+	{% for a in todos %}
 		{% if a.nombre_doc != '' %}
 			nombre: {{a.nombre_doc}}: {{a.adjunto}}<br>
 		{% endif %}
