--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -450,7 +450,38 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	display: block;
 }
 
-#foros-imagen-content_type-object_id-0-foto-clear_id{display:none;}
+.foro #id_nombre{
+	width:500px;
+}
+
+#ui-datepicker-div{font-size:12px;}
+
+.fixed{position: fixed; top: 10px;}
+.media-form-inline p{
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	margin-bottom: 3px;
+}
+.media-form-inline span{display: none;}
+.media-form-inline .imgpreview img{
+	float: left;
+}
+.media-form-inline .inputreplace{
+	margin-top: -15px;
+	margin-left: 5px;
+}
+.media-form-inline p input{
+	float: left;
+}
+.media-form-inline p label{
+	float: left;
+	width: 60px;
+}
+.media-form-inline .hideclear{
+	display: none;
+}
+
 
 //Barra admin 
 
