--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -10,10 +10,21 @@
   <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.css" >
   <script type="text/javascript" src="/files/bootstrap/js/bootstrap.js"></script>
   <script type="text/javascript" src="/files/bootstrap/js/bootstrap-transition.js"></script>
-
-
+  <script type="text/javascript" src="/files/js/jqueryui.js"></script>
+  <link type="text/css" rel="stylesheet"  href="/files/css/jqueryui.css" >
   <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
   <script type="text/javascript" src="/files/js/less.min.js"></script>
+  <script type="text/javascript">
+    $(function() {
+    $("#id_apertura , #id_cierre , #id_fecha_skype , #id_memoria").datepicker({ 
+        dateFormat: 'dd/mm/yy', 
+        dayNamesMin: ['Do', 'Lu', 'Ma', 'Mi', 'Ju', 'Vi', 'Sa'], 
+        monthNames: ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'],
+        changeYear: true
+      });
+  });
+  </script>
+
   {%block extra_js%}{%endblock%}
 </head>
 <body>
