--- a/templates/foros/crear_foro.html
+++ b/templates/foros/crear_foro.html
@@ -14,29 +14,36 @@
                 // detectar el scroll de la ventana y fixear el elemento
             $(window).bind('scroll', function() {
                 var windowTop = $(this).scrollTop();
-                if(windowTop>=310){
+                if(windowTop>=240){
                         $elem.addClass('fixed');
                 }else{
                         // volver elemento a su lugar
                         $elem.removeClass('fixed');
                 }
             }); 
-            var $file = $('.file > a');
-            var url = $file.text();
-            $file.html('');
-            $file.append('<img src="/uploads/'+url+'" width="60" height="60">');
+
+            $('a[href^="/uploads/fotos"]').each(function(index, item){
+                $(item).html('');
+                $(item).append('<img src="'+$(item).attr('href')+'" width="60" height="60">');
+            });
+            
+            $('p:has(input[type="file"])').each(function(index, item){
+                $(item).children('a').addClass('imgpreview').siblings('input').addClass('inputreplace');                
+                $(item).html(function(id, html){
+                        return html.replace('Actualmente:', '').replace('Modificar:', '');
+                });
+            });
+            $('input[id*="clear"], label[for*="clear"]').addClass('hideclear');
 
             //para definir el alto de las tabs igual a su contenido
             var alto = $('.tab-content').height();
             $('.nav-tab-media').height(alto);
-
         });
 </script>
 
 {% endblock %}
 
 {% block contenido%}
-
 <div class="row">
     <div class="encabezado">
       <div class="container">
@@ -52,14 +59,13 @@
       </div>
     </div>
 </div>
-
 <div class="row">
         <div class="container">
                 <div class="row">
                     <form enctype="multipart/form-data" action="." method="post">{% csrf_token %}
                         {{ form.media }}
                         <div class="span9">
-                                <div class="well">
+                                <div class="well foro">
                                         {%if form.errors%}
                                                 <div class="alert alert-error"><b>Favor corregir los siguientes errores</b><br>{{form.errors}}</div>
                                         {%endif%}
@@ -73,34 +79,46 @@
                                                 </ul>
                                                 <div class="tab-content tab-media">
                                                   <div class="tab-pane active" id="fotos">
-                                                        <b>FOTOS</b>
+                                                       <span class="label label-warning">FOTOS</span><hr>
+                                                       {{ form2.management_form }}
                                                         {% for foto in form2 %}
+                                                        <div class="media-form-inline">
                                                                 {{foto.label_tag}}
                                                                 {{foto}}
+                                                        </div>
                                                         {% endfor %}
                                                         <hr>
                                                   </div>
                                                   <div class="tab-pane" id="documentos">
-                                                        <b>DODCUMENTOS</b>
+                                                        <span class="label label-warning">DODCUMENTOS</span><hr>
+                                                        {{ form3.management_form }}
                                                         {% for docu in form3 %}
+                                                        <div class="media-form-inline">
                                                                 {{docu.label_tag}}
                                                                 {{docu}}
+                                                        </div>
                                                         {% endfor %}
                                                         <hr>
                                                   </div>
                                                   <div class="tab-pane" id="videos">
-                                                        <b>VIDEOS</b>
+                                                        <span class="label label-warning">VIDEOS</span><hr>
+                                                        {{ form4.management_form }}
                                                         {% for video in form4 %}
+                                                        <div class="media-form-inline">
                                                                 {{video.label_tag}}
                                                                 {{video}}
+                                                        </div>
                                                         {% endfor %}
                                                         <hr>
                                                   </div>
                                                   <div class="tab-pane" id="audios">
-                                                        <b>AUDIOS</b>
+                                                        <span class="label label-warning">AUDIOS</span><hr>
+                                                        {{ form5.management_form }}
                                                         {% for audio in form5 %}
+                                                        <div class="media-form-inline">
                                                                 {{audio.label_tag}}
                                                                 {{audio}}
+                                                        </div>
                                                         {% endfor %}
                                                         <hr>
                                                   </div>
@@ -111,7 +129,7 @@
                         </div>
                         <div class="span3">
                                 <div class="alert "><i class="icon-info-sign"></i>
-                                  Crear una nota para presentar al publico un contenido destacado de tu organizacion
+                                  Formulario para la creacion de foros
                                 </div>
                                 <div class="well" id="actionbuttons">
                                 <input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
